# oxideLLM

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEEPSEEK.md  GEMINI.md  NOTICE.md  README.md  SECURITY.md  docker-compose.yml
.context/: bottlenecks.md  field-guide.md  project-manifest.md  roadmap.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.obsidian/: workspace.json
benchmarks/: README.md  alpha-v1-benchmark-summary.md  external-upstream-benchmark-runbook.md  stage-02-wsl2-ext4-20260628-summary.md  vllm-parity-runbook.md
docs/: agent-execution-hardening.md  agent-execution-system.md  agent-prompts.md  agent-quality-scorecard.md  agent-readiness-matrix.md  agent-task-cards.md  architecture.md  context-packets.md  github-workflow.md  implementation-playbook.md  licensing-strategy.md  multi-agent-handoff.md  operational-priorities.md  production-ritual.md  protocol-contracts.md  research-sources.md  review-gates.md  second-pass-2026.md  telemetry-schema.md  testing-strategy.md  tooling-setup.md  validation-gates.md  verification-ledger.md
examples/: .env.example  README.md  basic_config.toml  config.toml.example  multi_provider.toml
k6/: groq-integration.js  proxy-vs-direct.js
mock/: .gitignore  Cargo.toml  Dockerfile  mock_server.py
mock/src/: main.rs
scripts/: bench.ps1  build.sh  profile_heap.sh  run_stage2_benchmark_wsl.sh  validate_context.ps1
src/: config.rs  drain.rs  lib.rs  main.rs  models.rs  proxy.rs  routes.rs  sse.rs  stream.rs  telemetry.rs
tests/: integration_test.rs
(+29 files in other folders)
