[package]
name = "oxidellm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "High-performance Rust LLM gateway with async telemetry off the critical path."
repository = "https://github.com/lugga1s/oxideLLM"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "charset", "http2"] }

[dev-dependencies]
tower = "0.5"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
